--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//BacNhat/src/bac1/Bac1.java=UTF-8
+encoding//BacNhat/src/bac1/Bac2.java=UTF-8
 encoding//BacNhat/src/bac1/MangPT.java=UTF-8
